--- a/packages/offix-angular/package.json
+++ b/packages/offix-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offix-angular",
-  "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "0.0.1",
+  "description": "Use your GraphQL data in your Angular app, with the Offix Client",
+  "version": "0.0.2",
   "author": {
     "name": "Christoph John",
     "email": "christoph_john@gmx.de",
